04. Multiple Modules/modules/sec-grp/main.tf
#6 Create Security Group
resource "aws_security_group" "secgrp" {
    name        = "secgrpz"
    vpc_id      = var.thevpc_id

#    Allow ssh from anywhere
    ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

#    Allow http from anywhere
    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

# Allow all outbound traffic
    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
